# Todo_app

./: README.md  compose.yml
Todo_app/: .env  Dockerfile  pyproject.toml
Todo_app/app/: database.py  main.py  setting.py
